--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi, I'm Aaron Ezekiel</h1>
+    <h1>Hi, krystalcuarteros</h1>
 
     <input type="text" id="Textbox" placeholder = "Type something here..." oninput = "updateDisplay" />
 
