--- a/Index.html
+++ b/Index.html
@@ -6,21 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi, krystal cuarteros </h1>
+    <h1>Hello World</h1>
 
-    <input type="text" id="Textbox" placeholder = "Type something here..." oninput = "updateDisplay" />
-
-    <h1 id="displaytext">Your Text will appear here</h1>
+    <input type="text" id="textbox" placeholder="Type something here..." 
+           oninput="updateDisplay()">
+    <h1 id="displayText">Your text will appear here</h1>
 
 <script>
 
     function updateDisplay(){
-
-        var textbox = document.getElementById("Textbox");
-        var displayText = document.getElementById(displayText);
+        var textbox = document.getElementById('textbox');
+        var displayText = document.getElementById('displayText');
 
         displayText.textContent = textbox.value;
-
     }
 
 </script>
